# batmc-mcp-server

./: .env.example  README.md  claude-desktop-config.example.json  pyproject.toml
src/batmc_mcp/: __init__.py  __main__.py  api_client.py  auth.py  config.py  formatting.py  server.py
src/batmc_mcp/tools/: borrowers.py  loans.py  payments.py
