[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batmc-mcp"
version = "0.1.0"
description = "MCP server for BATMC Lending App"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
batmc-mcp = "batmc_mcp.server:mcp.run"
